flag used text templates